created background and more css styling

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/Users/shomaripope/projects/unit1Project/style.css">
-    <link rel="textDocument" href="/Users/shomaripope/projects/unit1Project/usa.txt">
+    <link rel="stylesheet" href="style.css">
+    <link rel="textDocument" href="usa.txt">
 </head>
 <body>
     <header><h1>Days of Future Present</h1></header>
@@ -22,10 +22,10 @@
         Once you start, you'll have limited time to guess the answer, before you fade out of existence! Hurry, your clock is ticking...! </p>
 </div>
 <div class="leftMain">
-    <h2>Stats:</h2>
+    <h2 id="stats">Stats:</h2>
 
     <div class="stats">
-    <p id="keys">Letters to Choose:
+    <p id="keys">Letters to Choose: <br>
     <button id = "a" type="button">A</button>
     <button id = "b" type="button">B</button>
     <button id = "c" type="button">C</button>
@@ -59,11 +59,11 @@
 <div class= "main">
 <header>Here we go!</header>
 <p>
-<image id="playerImage" src="/Users/shomaripope/projects/unit1Project/shomPope.png">
+<image id="playerImage" src="shomPope.png">
 </p>
 </div>
 
-<script src="file:///Users/shomaripope/projects/unit1Project/jquery-3.3.1.js"></script>
+<script src="jquery-3.3.1.js"></script>
 <script src="app.js"></script>   
 </body>
 </html>
