logic for determining correct letter choice within array

--- a/index.html
+++ b/index.html
@@ -26,32 +26,32 @@
 
     <div class="stats">
     <p id="keys">Letters to Choose: <br>
-    <button id = "a" type="button">A</button>
-    <button id = "b" type="button">B</button>
-    <button id = "c" type="button">C</button>
-    <button id = "d" type="button">D</button>
-    <button id = "e" type="button">E</button>
-    <button id = "f" type="button">F</button>
-    <button id = "g" type="button">G</button>
-    <button id = "h" type="button">H</button>
-    <button id = "i" type="button">I</button>
-    <button id = "j" type="button">J</button>
-    <button id = "k" type="button">K</button>
-    <button id = "l" type="button">L</button>
-    <button id = "m" type="button">M</button>
-    <button id = "n" type="button">N</button>
-    <button id = "o" type="button">O</button>
-    <button id = "p" type="button">P</button>
-    <button id = "q" type="button">Q</button>
-    <button id = "r" type="button">R</button>
-    <button id = "s" type="button">S</button>
-    <button id = "t" type="button">T</button>
-    <button id = "u" type="button">U</button>
-    <button id = "v" type="button">V</button>
-    <button id = "w" type="button">W</button>
-    <button id = "x" type="button">X</button>
-    <button id = "y" type="button">Y</button>
-    <button id = "z" type="button">Z</button>
+    <button class="letterChoice" id = "a" type="button">A</button>
+    <button class="letterChoice"  id = "b" type="button">B</button>
+    <button class="letterChoice" id = "c" type="button">C</button>
+    <button class="letterChoice" id = "d" type="button">D</button>
+    <button class="letterChoice" id = "e" type="button">E</button>
+    <button class="letterChoice" id = "f" type="button">F</button>
+    <button class="letterChoice" id = "g" type="button">G</button>
+    <button class="letterChoice" id = "h" type="button">H</button>
+    <button class="letterChoice" id = "i" type="button">I</button>
+    <button class="letterChoice" id = "j" type="button">J</button>
+    <button class="letterChoice" id = "k" type="button">K</button>
+    <button class="letterChoice" id = "l" type="button">L</button>
+    <button class="letterChoice" id = "m" type="button">M</button>
+    <button class="letterChoice" id = "n" type="button">N</button>
+    <button class="letterChoice" id = "o" type="button">O</button>
+    <button class="letterChoice" id = "p" type="button">P</button>
+    <button class="letterChoice" id = "q" type="button">Q</button>
+    <button class="letterChoice" id = "r" type="button">R</button>
+    <button class="letterChoice" id = "s" type="button">S</button>
+    <button class="letterChoice" id = "t" type="button">T</button>
+    <button class="letterChoice" id = "u" type="button">U</button>
+    <button class="letterChoice" id = "v" type="button">V</button>
+    <button class="letterChoice" id = "w" type="button">W</button>
+    <button class="letterChoice" id = "x" type="button">X</button>
+    <button class="letterChoice" id = "y" type="button">Y</button>
+    <button class="letterChoice" id = "z" type="button">Z</button>
     </div>
     </p>
 </div>
