--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li id="game"><a href="#">Click Here to Start Game</a></li>
+            <li id="game"><a href="#">Play</a></li>
           </ul>
 <div>
     <p>
@@ -59,7 +59,7 @@
 <div class= "main">
 <header>Here we go!</header>
 <p>
-<image id="playerImage" src="shomPope.png">
+<image id="game_logo" src="/game_logo.png">
 </p>
 </div>
 
