--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="textDocument" href="usa.txt">
 </head>
 <body>
-    <header><h1>Days of Future Present</h1></header>
+    <header><h1>TIME CRUNCH</h1></header>
     <ul class="navigation">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -26,40 +26,41 @@
 
     <div class="stats">
     <p id="keys">Letters to Choose: <br>
-    <button class="letterChoice" id = "a" type="button">A</button>
-    <button class="letterChoice"  id = "b" type="button">B</button>
-    <button class="letterChoice" id = "c" type="button">C</button>
-    <button class="letterChoice" id = "d" type="button">D</button>
-    <button class="letterChoice" id = "e" type="button">E</button>
-    <button class="letterChoice" id = "f" type="button">F</button>
-    <button class="letterChoice" id = "g" type="button">G</button>
-    <button class="letterChoice" id = "h" type="button">H</button>
-    <button class="letterChoice" id = "i" type="button">I</button>
-    <button class="letterChoice" id = "j" type="button">J</button>
-    <button class="letterChoice" id = "k" type="button">K</button>
-    <button class="letterChoice" id = "l" type="button">L</button>
-    <button class="letterChoice" id = "m" type="button">M</button>
-    <button class="letterChoice" id = "n" type="button">N</button>
-    <button class="letterChoice" id = "o" type="button">O</button>
-    <button class="letterChoice" id = "p" type="button">P</button>
-    <button class="letterChoice" id = "q" type="button">Q</button>
-    <button class="letterChoice" id = "r" type="button">R</button>
-    <button class="letterChoice" id = "s" type="button">S</button>
-    <button class="letterChoice" id = "t" type="button">T</button>
-    <button class="letterChoice" id = "u" type="button">U</button>
-    <button class="letterChoice" id = "v" type="button">V</button>
-    <button class="letterChoice" id = "w" type="button">W</button>
-    <button class="letterChoice" id = "x" type="button">X</button>
-    <button class="letterChoice" id = "y" type="button">Y</button>
-    <button class="letterChoice" id = "z" type="button">Z</button>
+    <button class="letterChoice" id = "a" type="button" value="A">A</button>
+    <button class="letterChoice" id = "b" type="button" value="B">B</button>
+    <button class="letterChoice" id = "c" type="button" value="C">C</button>
+    <button class="letterChoice" id = "d" type="button" value="D">D</button>
+    <button class="letterChoice" id = "e" type="button" value="E">E</button>
+    <button class="letterChoice" id = "f" type="button" value="F">F</button>
+    <button class="letterChoice" id = "g" type="button" value="G">G</button>
+    <button class="letterChoice" id = "h" type="button" value="H">H</button>
+    <button class="letterChoice" id = "i" type="button" value="I">I</button>
+    <button class="letterChoice" id = "j" type="button" value="J">J</button>
+    <button class="letterChoice" id = "k" type="button" value="K">K</button>
+    <button class="letterChoice" id = "l" type="button" value="L">L</button>
+    <button class="letterChoice" id = "m" type="button" value="M">M</button>
+    <button class="letterChoice" id = "n" type="button" value="N">N</button>
+    <button class="letterChoice" id = "o" type="button" value="O">O</button>
+    <button class="letterChoice" id = "p" type="button" value="P">P</button>
+    <button class="letterChoice" id = "q" type="button" value="Q">Q</button>
+    <button class="letterChoice" id = "r" type="button" value="R">R</button>
+    <button class="letterChoice" id = "s" type="button" value="S">S</button>
+    <button class="letterChoice" id = "t" type="button" value="T">T</button>
+    <button class="letterChoice" id = "u" type="button" value="U">U</button>
+    <button class="letterChoice" id = "v" type="button" value="V">V</button>
+    <button class="letterChoice" id = "w" type="button" value="W">W</button>
+    <button class="letterChoice" id = "x" type="button" value="X">X</button>
+    <button class="letterChoice" id = "y" type="button" value="Y">Y</button>
+    <button class="letterChoice" id = "z" type="button" value="Z">Z</button>
     </div>
     </p>
 </div>
 
 <div class= "main">
-<header>Here we go!</header>
+<header class= "gameHeader">Here we go!</header>
 <p>
 <image id="game_logo" src="/game_logo.png">
+    <image id="playerImage" src="/narutoPic.jpg"></image>
 </p>
 </div>
 
