--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </div>
 <div class="leftMain">
     <h2 id="stats">Stats:</h2>
+    <p id = "screenWord"></p>
 
     <div class="stats">
     <p id="keys">Letters to Choose: <br>
