finally got logic to work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="textDocument" href="usa.txt">
 </head>
 <body>
-    <header><h1>TIME CRUNCH</h1></header>
+    <header><h1>Who Killed Naruto?!</h1></header>
     <ul class="navigation">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -18,8 +18,8 @@
           </ul>
 <div>
     <p>
-        Artificial Intelligence has found a way to affect the past and has begun a game to sustain worldly resources by making sure people don't exist, if they cant guess their ! <br>
-        Once you start, you'll have limited time to guess the answer, before you fade out of existence! Hurry, your clock is ticking...! </p>
+        A madperson, in our beloved WDI-19 Class, has found a way to affect the past and has gone back in time to make sure Naruto was never born! Who would do such a thing?? <br>
+        Once you start, you'll only have 4 minutes worth of time to guess the individual's name before Naruto fades out of existence FOREVER!! Hurry, his clock is ticking...! </p>
 </div>
 <div class="leftMain">
     <h2 id="stats">Stats:</h2>
